name:           genesys
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/StavrosChryselis/genesys#readme>
homepage:       https://github.com/StavrosChryselis/genesys#readme
bug-reports:    https://github.com/StavrosChryselis/genesys/issues
author:         Stavros Chryselis
maintainer:     stavros.chryselis@protonmail.com
copyright:      2019 Stavros Chryselis
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/StavrosChryselis/genesys

library
  exposed-modules:
      Genesys
    , Genesys.Backend.Threaded
    , Genesys.Backend.Logger
  other-modules:
      Paths_genesys
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , free
    , containers
    , mtl
    , async
    , stm
  default-extensions:
      RecordWildCards
    , ExistentialQuantification
    , ScopedTypeVariables
    , RankNTypes
  default-language: Haskell2010

executable genesys-exe
  main-is: Main.hs
  other-modules:
      Paths_genesys
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , genesys
  default-language: Haskell2010

executable counter-threaded
  main-is: Examples/Counter/Main.hs
  other-modules:
      Paths_genesys
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , genesys
  default-language: Haskell2010

executable paxos-threaded
  main-is: Examples/Paxos/Main.hs
  other-modules:
      Paths_genesys
    , Examples.Paxos.Message
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , genesys
  default-language: Haskell2010
